k8s/datastores-statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: marketpy-postgres
spec:
  serviceName: marketpy-postgres
  replicas: 1
  selector:
    matchLabels:
      app: marketpy-postgres
  template:
    metadata:
      labels:
        app: marketpy-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: marketpy-redis
spec:
  serviceName: marketpy-redis
  replicas: 1
  selector:
    matchLabels:
      app: marketpy-redis
  template:
    metadata:
      labels:
        app: marketpy-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: marketpy-influxdb
spec:
  serviceName: marketpy-influxdb
  replicas: 1
  selector:
    matchLabels:
      app: marketpy-influxdb
  template:
    metadata:
      labels:
        app: marketpy-influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2
        ports:
        - containerPort: 8086
