k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketpy-backend
spec:
  selector:
    app: marketpy-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
