k8s/datastores-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketpy-postgres
spec:
  selector:
    app: marketpy-postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: marketpy-redis
spec:
  selector:
    app: marketpy-redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: marketpy-influxdb
spec:
  selector:
    app: marketpy-influxdb
  ports:
  - port: 8086
    targetPort: 8086
